[project]
name = "todome-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.2",
    "mcp[cli]>=1.14.1",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.35.0",
]
